# qe6502-benchmark

./: CMakeLists.txt  INTERRUPT_ADAPTER_NOTES.md  LICENSE  README.md  all_6502_tests.cpp  all_65c02_tests.cpp  altirrasdl_singlestep_nmos.cpp  applewin_smoke_test.cpp  ares_smoke_test.cpp  chris_pikul_mos6502_singlestep_nmos.cpp  chris_pikul_mos6502_smoke_test.cpp  clk_klaus_benchmark.cpp  clk_singlestep_nmos.cpp  clk_singlestep_rockwell65c02.cpp  clk_singlestep_synertek65c02.cpp  fake6502_klaus_benchmark.cpp  fceux_smoke_test.cpp  flooh_smoke_test.cpp  gianlucag_mos6502_singlestep_nmos.cpp  gianlucag_mos6502_smoke_test.cpp  mame_smoke_test.cpp  o2_smoke_test.cpp  olcNES_klaus_benchmark.cpp  opcode_metadata_smoke_test.cpp  peddle_klaus_benchmark.cpp  qe6502-benchmark_test_methodology.md  qe6502-benchmark_v11_sflib6502_smoketest.patch  qe6502-benchmark_v87_move_applewin_memory_to_clients.patch  qe6502-benchmark_v89_add_new_nmos_singlestep.patch  qe6502_klaus_benchmark.cpp  qe6502_singlestep_nmos.cpp  sflib6502_klaus_benchmark.cpp  sflib6502_singlestep_nmos.cpp  sflib65c02_smoke_test.cpp  vremu6502_singlestep_nmos.cpp
cores/altirrasdl/: BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Copying.RMT  NETPLAY.md  README.md  altirra.md  build.sh
cores/altirrasdl/cmake/: copy_if_exists.cmake  embed_font.cmake  gen_icon_codepoints.cmake  generate_buildinfo.cmake
cores/altirrasdl/src/: .editorconfig  CMakeLists.txt
interrupts/basic/: CMakeLists.txt  all_instruction_interrupt_basic.cpp  applewin_instruction_cpu_smoke.cpp  applewin_instruction_interrupt_basic.cpp  applewin_instruction_interrupt_group1.cpp  applewin_instruction_interrupt_group2.cpp  applewin_instruction_interrupt_group3.cpp  applewin_instruction_interrupt_opcode_sweep.cpp  ares_instruction_cpu_smoke.cpp  ares_instruction_interrupt_basic.cpp  ares_instruction_interrupt_group1.cpp  ares_instruction_interrupt_group2.cpp  ares_instruction_interrupt_group3.cpp  ares_instruction_interrupt_opcode_sweep.cpp  chris_pikul_mos6502_instruction_cpu_smoke.cpp  chris_pikul_mos6502_instruction_interrupt_basic.cpp  chris_pikul_mos6502_instruction_interrupt_group1.cpp  chris_pikul_mos6502_instruction_interrupt_group2.cpp  chris_pikul_mos6502_instruction_interrupt_group3.cpp  chris_pikul_mos6502_instruction_interrupt_opcode_sweep.cpp  clk_instruction_cpu_smoke.cpp  clk_instruction_interrupt_basic.cpp  clk_instruction_interrupt_group1.cpp  clk_instruction_interrupt_group2.cpp  clk_instruction_interrupt_group3.cpp  clk_instruction_interrupt_opcode_sweep.cpp  fake6502_instruction_cpu_smoke.cpp  fake6502_instruction_interrupt_basic.cpp  fake6502_instruction_interrupt_group1.cpp  fake6502_instruction_interrupt_group2.cpp  fake6502_instruction_interrupt_group3.cpp  fake6502_instruction_interrupt_opcode_sweep.cpp  fceux_instruction_cpu_smoke.cpp  fceux_instruction_interrupt_basic.cpp  fceux_instruction_interrupt_group1.cpp  fceux_instruction_interrupt_group2.cpp  fceux_instruction_interrupt_group3.cpp  fceux_instruction_interrupt_opcode_sweep.cpp  floooh_chips_instruction_cpu_smoke.cpp  floooh_chips_instruction_interrupt_basic.cpp  (+58 more)
interrupts/basic/common/: instruction_interrupt_group1.cpp  instruction_interrupt_group1.hpp  instruction_interrupt_group2.cpp  instruction_interrupt_group2.hpp  instruction_interrupt_group3.cpp  instruction_interrupt_group3.hpp  instruction_interrupt_opcode_sweep.cpp  instruction_interrupt_opcode_sweep.hpp
interrupts/precision/: CMakeLists.txt  clk_i_flag_windows.cpp  clk_icpu_smoke.cpp  clk_interrupt_arbitration.cpp  clk_nmi_irq_pulse_sweep.cpp  floooh_chips_i_flag_windows.cpp  floooh_chips_icpu_smoke.cpp  floooh_chips_interrupt_arbitration.cpp  floooh_chips_nmi_irq_pulse_sweep.cpp  o2_i_flag_windows.cpp  o2_icpu_smoke.cpp  o2_interrupt_arbitration.cpp  o2_nmi_irq_pulse_sweep.cpp  peddle_i_flag_windows.cpp  peddle_icpu_smoke.cpp  peddle_interrupt_arbitration.cpp  peddle_nmi_irq_pulse_sweep.cpp  qe6502_i_flag_windows.cpp  qe6502_icpu_smoke.cpp  qe6502_interrupt_arbitration.cpp  qe6502_nmi_irq_pulse_sweep.cpp
interrupts/precision/common/: common.cpp  common.hpp  i_flag_windows.cpp  interrupt_arbitration.cpp  nmi_irq_pulse_sweep.cpp
toolbox/altirrasdl/: CMakeLists.txt
toolbox/altirrasdl/include/: altirrasdl_toolbox.hpp
toolbox/altirrasdl/src/: klaus_benchmark.cpp  singlestep.cpp  smoke.cpp  stubs.cpp
toolbox/applewin/: CMakeLists.txt
toolbox/applewin/include/: applewin_instruction_interrupt_basic.hpp  applewin_toolbox.hpp
toolbox/applewin/src/: applewin_cpu.cpp  instruction_cpu.cpp  klaus_benchmark.cpp  singlestep.cpp  smoke.cpp
toolbox/ares/: CMakeLists.txt
toolbox/ares/include/: ares_instruction_interrupt_basic.hpp  ares_toolbox.hpp
toolbox/ares/src/: instruction_cpu.cpp  klaus_benchmark.cpp  singlestep.cpp  smoke.cpp
toolbox/chris_pikul_mos6502/: CMakeLists.txt
toolbox/chris_pikul_mos6502/include/: chris_pikul_mos6502_instruction_interrupt_basic.hpp  chris_pikul_mos6502_toolbox.hpp
toolbox/chris_pikul_mos6502/src/: instruction_cpu.cpp  klaus_benchmark.cpp  singlestep.cpp  smoke.cpp
toolbox/clk/: CMakeLists.txt
toolbox/clk/include/: clk_instruction_interrupt_basic.hpp  clk_toolbox.hpp
toolbox/clk/src/: icpu.cpp  instruction_cpu.cpp  klaus_benchmark.cpp  singlestep.cpp  smoke.cpp
toolbox/common/: CMakeLists.txt
toolbox/common/SingleStepTestsLight/: SingleStepTests.md
toolbox/common/src/: build_info.cpp  singlestep.cpp
toolbox/fake6502/: CMakeLists.txt
toolbox/fake6502/include/: fake6502_instruction_interrupt_basic.hpp  fake6502_toolbox.hpp
toolbox/fake6502/src/: fake6502_bridge.c  instruction_cpu.cpp  klaus_benchmark.cpp  singlestep.cpp  smoke.cpp
toolbox/fake65c02/: CMakeLists.txt
toolbox/fceux/: CMakeLists.txt
toolbox/floooh_chips/: CMakeLists.txt
toolbox/gianlucag_mos6502/: CMakeLists.txt
toolbox/mame/: CMakeLists.txt
toolbox/o2/: CMakeLists.txt
toolbox/olcNES/: CMakeLists.txt
toolbox/peddle/: CMakeLists.txt
toolbox/qe6502/: CMakeLists.txt
toolbox/sflib6502/: CMakeLists.txt
toolbox/sflib65c02/: CMakeLists.txt
toolbox/vremu6502/: CMakeLists.txt
(+2651 files in other folders)
